--- a/angular.json
+++ b/angular.json
@@ -15,6 +15,7 @@
       "prefix": "app",
       "architect": {
         "build": {
+          
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/admindashboard",
@@ -29,8 +30,9 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/ngx-toastr/toastr.css"
-              
+              "node_modules/ngx-toastr/toastr.css",
+              "./node_modules/font-awesome/css/font-awesome.css"
+
             ],
             "scripts": [
               
